
<resources>
    <string name="app_name">Coins</string>
    <string name="coin">Crypto</string>
    <string name="coin_symbol">Symbol</string>
    <string name="coin_quote">Price</string>
    <string name="coin_change" translatable="false">24h/7d</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_show_ticked">Show favourites</string>
    <string name="menu_uncheck_all">Uncheck all</string>


    <string name="wallet_button_add_coins">Add</string>
    <string name="total">Total</string>
    <string name="volume">Volume</string>
    <string name="amountPrice"> Volume / Price</string>
    <string name="wallet">Wallet</string>
    <string name="coins">Coins</string>
    <string name="dialog_title">Choose crypto and enter volume</string>
    <string name="zero_balance" translatable="false">0.00 USD</string>
    <string name="total_balance">Total balance:</string>
    <string name="dialog_error">Choose coin and enter volume</string>
    <string name="enter_volume">Enter volume:</string>
    <string name="insert_volume_here">Insert volume here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>



    <string name="error_occurred">Connection problem :(</string>
    <string name="price_change_alert">Price Change Alert</string>
    <string name="notification_on" translatable="false">ON</string>
    <string name="notification_off" translatable="false">OFF</string>
    <string name="bitcoin_price_alert">Bitcoin price alert</string>
    <string name="notification">Price notification</string>
    <string name="price_notification">Below enter the price when Bitcoin reach,\n
        you would like to be notified.</string>
    <string name="coin_logo" translatable="false">coin logo</string>
    <string name="response_error">Couldn\'t get latest data. Try refresh</string>
    <string name="latest_bitcoin_price">Latest Bitcoin price:</string>
    <string name="in_bitcoin_we_trust" translatable="false">In Bitcoin we trust</string>
    <string name="current_price_alert">Current price alert:</string>
    <string name="wallets">Wallets</string>
    <string name="info_price_alert_too_small">Alert must be higher at least by $1000 than latest price</string>
    <string name="enter_price">Enter price, higher at least by $1000 than latest price</string>
    <string name="something_wrong">Something went wrong, refresh"</string>
    <string name="choose_coin">Choose coin:</string>
    <string name="currency">Currency</string>
    <string name="about">About this app:</string>
    <string name="cointelegraph" translatable="false">Cointelegraph</string>
    <string name="drawer_bottom" translatable="false">coinmarketcap.com</string>

   <!-- settings -->
    <string name="settings">Settings</string>
    <string name="settings_language_key" translatable="false">language</string>
    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="settings_currency_key" translatable="false">currency</string>

    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="follow_system">Follow system</string>

    <string-array name="settings_themes">
        <item>@string/light_theme</item>
        <item>@string/dark_theme</item>
        <item>@string/follow_system</item>
    </string-array>

    <string name="language_entry">"English"</string>
    <string name="language_value">EN</string>
    <string name="language">Language</string>


    <string-array name="settings_language_entries">
        <item>"English"</item>
        <item>"Polski"</item>
    </string-array>

    <string-array name="settings_language_values">
        <item>"EN"</item>
        <item>"PL"</item>
    </string-array>

    <string-array name="settings_currency">
        <item>"USD"</item>
        <item>"EUR"</item>
        <item>"PLN"</item>
    </string-array>
    <string name="news">Crypto News</string>
    <string name="wait_for_connection">Wait for connection</string>
    <string name="alert_hint">Enter price here</string>
    <string name="about_source">Source code:\n https://github.com/pawel-hn/CoinMarketApp</string>
    <string name="about_data">Data from www.coinmarketcap.com</string>
    <string name="about_news">News from www.cointelegraph.com</string>
    <string name="clear_wallet">Clear all coins</string>
    <string name="clear_wallet_msg">This will delete ALL coins from ALL wallets</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done_by">App done by Pawel Hnacik</string>
    <string name="currency_set">Currency set to</string>


</resources>