
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/backGround"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_coin"
        android:textStyle="bold"
        android:textColor="@color/dialogText"
        android:layout_marginBottom="10dp"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner_dialog_search"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogText"
        android:text="@string/enter_volume"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_volume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/insert_volume_here"
        android:maxLength="8"
        android:inputType="numberDecimal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">


        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_dialog_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>




</LinearLayout>