
<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/coinsFragment">

    <fragment
        android:id="@+id/coinsFragment"
        android:name="pawel.hn.coinmarketapp.fragments.CoinsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_coins" />
    <fragment
        android:id="@+id/walletFragment"
        android:name="pawel.hn.coinmarketapp.fragments.WalletFragment"
        android:label="Wallet"
        tools:layout="@layout/fragment_wallet"/>
    <dialog
        android:id="@+id/addCoinFragmentDialog"
        android:name="pawel.hn.coinmarketapp.fragments.AddCoinFragmentDialog"
        android:label="AddCoinFragmentDialog" >
        <argument
            android:name="walletNumber"
            app:argType="integer" />
    </dialog>
    <fragment
        android:id="@+id/priceNotifyFragment"
        android:name="pawel.hn.coinmarketapp.fragments.PriceNotifyFragment"
        android:label="@string/notification" />
    <fragment
        android:id="@+id/walletsFragment"
        android:name="pawel.hn.coinmarketapp.fragments.WalletPagerFragment"
        android:label="@string/wallet" />

    <action android:id="@+id/action_global_addCoinFragmentDialog"
        app:destination="@id/addCoinFragmentDialog" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="pawel.hn.coinmarketapp.fragments.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="pawel.hn.coinmarketapp.fragments.NewsFragment"
        android:label="@string/cointelegraph"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_newsFragment_to_newsWebFragment"
            app:destination="@id/newsWebFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsWebFragment"
        android:name="pawel.hn.coinmarketapp.fragments.NewsWebFragment"
        android:label="@string/cointelegraph"
        tools:layout="@layout/fragment_news_webview">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/aboutFragmentDialog"
        android:name="pawel.hn.coinmarketapp.fragments.AboutDialogFragment"
        android:label="AboutDialogFragment" />
</navigation>