
<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/NotificationOnOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bitcoin_price_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notification_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:track="@drawable/track" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/price_notification"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_switch" />

    <EditText
        android:id="@+id/edit_text_price_to_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:hint="@string/alert_hint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_price_alert_update"
        app:layout_constraintEnd_toStartOf="@+id/btn_price_alert_update"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="edittext" />

    <Button
        android:id="@+id/btn_price_alert_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />


    <TextView
        android:id="@+id/textView4"
        style="@style/NotificationOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_off"
        app:layout_constraintBaseline_toBaselineOf="@+id/notification_switch"
        app:layout_constraintEnd_toStartOf="@+id/notification_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        style="@style/NotificationOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_on"
        app:layout_constraintBaseline_toBaselineOf="@+id/notification_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/notification_switch" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/current_price_alert"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/latest_price_text"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_price_to_alert" />

    <TextView
        android:id="@+id/tv_curr_price_alert"
        style="@style/NotificationOnOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/tv_latest_price"
        tools:text="50,000" />

    <TextView
        android:id="@+id/latest_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/latest_bitcoin_price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_latest_price"
        style="@style/NotificationOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/latest_price_text"
        app:layout_constraintStart_toEndOf="@+id/latest_price_text"
        tools:text="50,000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="152dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/in_bitcoin_we_trust"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latest_price_text"
        app:layout_constraintVertical_bias="0.127"
        app:srcCompat="@drawable/in_one_coin" />


</androidx.constraintlayout.widget.ConstraintLayout>