
<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="walletViewModel"
            type="pawel.hn.coinmarketapp.viewmodels.WalletViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGround"
        android:padding="8dp"
        tools:context=".fragments.WalletFragment"
        app:layoutDescription="@xml/fragment_wallet_scene"
        >


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="chart"
             />


        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient_top"
            app:layout_constraintTop_toBottomOf="@id/barrier" />


        <TextView
            android:id="@+id/total_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_balance"
            android:textAlignment="textEnd"
            android:textColor="@color/walletTotalBalance"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/view_bot"
            app:layout_constraintEnd_toStartOf="@+id/text_view_balance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top" />

        <TextView
            android:id="@+id/text_view_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/zero_balance"
            android:textAlignment="center"
            android:textColor="@color/walletTotalBalance"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/view_bot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            tools:text="1,000,000 USD" />

        <View
            android:id="@+id/view_bot"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient_bot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_balance" />


        <TextView
            android:id="@+id/crypto"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/coin"
            android:gravity="center_vertical"
            android:textColor="@color/coinsListHeader"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/volumePrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_bot" />

        <TextView
            android:id="@+id/volumePrice"